--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">SunnyWeather</string>
     <string name="input_address">输入地址</string>
+    <string name="forecast">预报</string>
 </resources>
